validacao do endereco passado na requisicao.